package behavioral.observer.interfaces;

public interface IObserver {
    void update();
}
